fixed burger menu cropping on phone screen

--- a/style.css
+++ b/style.css
@@ -30,10 +30,10 @@
 
 	#barBox{
 		overflow-y: scroll;
+		transform: scale(1.15);
 	}
 
 	.buttonNav{
-		
 		transform: scale(0.5);
 	}
 
@@ -123,7 +123,7 @@ body {
 
 #barBox{
 	background-color: rgb(43, 43, 43);
-	margin-top: 70px;
+	margin-top: 140px;
 	height: 100%;
 	width: 100%;
 	text-align: center;
